Added add to cart features

--- a/templates/base.html
+++ b/templates/base.html
@@ -30,6 +30,11 @@
             </a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="{% url 'listings:view_cart' %}">
+              <i class="fas fa-shopping-cart"></i> Cart
+            </a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="{% url 'messaging:inbox' %}">
               <i class="fas fa-inbox"></i> Inbox
               {% if unread_message_count > 0 %}
