--- a/templates/base.html
+++ b/templates/base.html
@@ -58,6 +58,8 @@
             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
               <li><a class="dropdown-item" href="{% url 'accounts:profile' %}">My Profile</a></li>
               <li><a class="dropdown-item" href="{% url 'accounts:dashboard' %}">Seller Dashboard</a></li>
+              <li><a class="dropdown-item" href="{% url 'accounts:seller_orders' %}">My Sales</a></li>
+              <li><a class="dropdown-item" href="{% url 'accounts:order_history' %}">My Purchases</a></li>
               <li><a class="dropdown-item" href="{% url 'accounts:saved_listings' %}">My Saved Items</a></li>
               <li><hr class="dropdown-divider"></li>
               <li>
