--- a/templates/accounts/seller_orders.html
+++ b/templates/accounts/seller_orders.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
+{% load crispy_forms_tags %}
 {% load listings_tags %}
 
 {% block title %}My Sales{% endblock %}
@@ -21,9 +22,13 @@
                             </div>
                             <p class="mb-1">Quantity: {{ checkout.quantity }}</p>
                             <p class="mb-1">
-                                <span class="badge bg-success">
-                                    Status: {{ checkout.status|title }}
-                                </span>
+                                <form action="{% url 'accounts:update_order_status' pk=checkout.pk %}" method="post">
+                                    {% csrf_token %}
+                                    <div class="d-flex align-items-center">
+                                        {{ forms|get_item:checkout.id|crispy }}
+                                        <button type="submit" class="btn btn-sm btn-primary ms-2">Update</button>
+                                    </div>
+                                </form>
                             </p>
                             <small class="text-muted">
                                 Buyer: {{ checkout.user.username }}<br/>
