--- a/templates/accounts/saved_listings.html
+++ b/templates/accounts/saved_listings.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load listings_tags %}
 
 {% block title %}My Saved Items{% endblock %}
 
@@ -20,7 +21,7 @@
                         {% endif %}
                     </a>
                     <div class="card-body">
-                        <h5 class="card-title fw-bold">₱{{ item.listing.price|floatformat:2 }}</h5>
+                        <h5 class="card-title fw-bold">₱{{ item.listing.price|philippine_currency }}</h5>
                         <p class="card-text">{{ item.listing.title }}</p>
                         <p class="card-text text-muted small">{{ item.listing.city }}</p>
                     </div>
