--- a/templates/listings/listing_update.html
+++ b/templates/listings/listing_update.html
@@ -24,18 +24,28 @@
           <div class="card">
             <div class="card-header">
               <h5>Edit Images</h5>
-              <small class="text-muted">You can replace images, remove existing ones, or add new ones.</small>
+              <small class="text-muted">Delete existing images or add new ones.</small>
             </div>
             <div class="card-body">
-              {{ formset.management_form }}
-              {% for image_form in formset %}
-                <div class="form-group border-bottom pb-3 mb-3">
-                  {% if image_form.instance.image %}
-                    <img src="{{ image_form.instance.image.url }}" class="img-thumbnail mb-2" style="max-width: 150px;">
-                  {% endif %}
-                  {{ image_form|crispy }}
-                </div>
-              {% endfor %}
+              <div class="row mb-3">
+                {% for image in listing.images.all %}
+                  <div class="col-md-4 mb-3">
+                    <div class="position-relative">
+                      <img src="{{ image.image.url }}" class="img-thumbnail w-100 mb-2" alt="Current Image">
+                      <div class="form-check">
+                        <input class="form-check-input" type="checkbox" name="images_to_delete" value="{{ image.pk }}" id="delete-{{ image.pk }}">
+                        <label class="form-check-label text-danger" for="delete-{{ image.pk }}">
+                          Delete this image
+                        </label>
+                      </div>
+                    </div>
+                  </div>
+                {% empty %}
+                  <p class="text-muted">No images for this listing yet.</p>
+                {% endfor %}
+              </div>
+              <p class="mt-3">Upload new images to add to the listing (up to 6 total):</p>
+              <input type="file" name="images" id="id_images" class="form-control" multiple>
             </div>
           </div>
 
