feat: Add invoice generation feature for seller orders

--- a/templates/accounts/seller_orders.html
+++ b/templates/accounts/seller_orders.html
@@ -34,6 +34,9 @@
                                 Buyer: {{ checkout.user.username }}<br/>
                                 Shipping to: {{ checkout.full_name }}, {{ checkout.shipping_address }}, {{ checkout.shipping_city }}
                             </small>
+                            <div class="mt-2">
+                                <a href="{% url 'listings:invoice' pk=checkout.pk %}" class="btn btn-sm btn-outline-info">View Invoice</a>
+                            </div>
                         </div>
                     {% endfor %}
                 </div>
