--- a/templates/accounts/profile.html
+++ b/templates/accounts/profile.html
@@ -8,7 +8,11 @@
     <div class="row gx-lg-5">
         <div class="col-lg-4 mb-4 mb-lg-0">
             <div class="profile-info-card">
-                <img src="{{ request.user.profile.display_avatar_url }}" class="profile-avatar mb-3" alt="User Avatar">
+                {% if request.user.profile.avatar and request.user.profile.avatar.url %}
+                <img src="{{ request.user.profile.avatar.url }}" class="profile-avatar mb-3" alt="User Avatar">
+                {% else %}
+                <img src="{% static 'images/default_avatar.svg' %}" class="profile-avatar mb-3" alt="Default Avatar">
+                {% endif %}
                 <h4 class="profile-name">{{ request.user.username }}</h4>
                 {% if request.user.profile.phone %}
                 <p class="text-muted small">
@@ -37,7 +41,7 @@
                     <div class="listing-card">
                         <a href="{{ listing.get_absolute_url }}">
                             <div class="listing-card-image-container">
-                                {% if listing.images.first %}
+                                {% if listing.images.first and listing.images.first.image.url %}
                                 <img src="{{ listing.images.first.image.url }}" class="listing-card-image" alt="{{ listing.title }}">
                                 {% else %}
                                 <div class="listing-card-placeholder">
@@ -77,7 +81,11 @@
                 </div>
                 <div class="modal-body">
                     <div class="text-center mb-3">
-                        <img src="{{ request.user.profile.display_avatar_url }}" id="avatar-preview" class="rounded-circle profile-edit-avatar" width="120" height="120" style="object-fit: cover;">
+                         {% if request.user.profile.avatar and request.user.profile.avatar.url %}
+                        <img src="{{ request.user.profile.avatar.url }}" id="avatar-preview" class="rounded-circle profile-edit-avatar" width="120" height="120" style="object-fit: cover;">
+                        {% else %}
+                        <img src="{% static 'images/default_avatar.svg' %}" id="avatar-preview" class="rounded-circle profile-edit-avatar" width="120" height="120" style="object-fit: cover;">
+                        {% endif %}
                     </div>
                     <div class="mb-3">
                         <label for="id_avatar" class="form-label">Change Avatar</label>
